syntax = "proto3";

option go_package = "proto/auth";

package proto;

message SignUpRequest {
  string login = 1;
  string password = 2;
}

message SignUpResponse {
  string error = 2;
}

message LoginRequest {
  string login = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string error = 2;
}

service AuthManagement {
  rpc Login(LoginRequest) returns(LoginResponse);
  rpc SignUp(SignUpRequest) returns(SignUpResponse);
}
